# CrewAI

./: README.md  pyproject.toml
output/: report.md
src/geminiai/: crew.py  main.py
src/geminiai/config/: agents.yaml  tasks.yaml
