[project]
name = "geminiai"
version = "0.1.0"
description = "geminiAI using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
geminiai = "geminiai.main:run"
run_crew = "geminiai.main:run"
train = "geminiai.main:train"
replay = "geminiai.main:replay"
test = "geminiai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
